# Rasteron

./: CMakeLists.txt  ReadMe.md  ReadMe.txt  extTargets.cmake  externalTargets.cmake  findDepends.cmake.in  projTargets.cmake  toolTargets.cmake
assets/: Logo.tiff  User.tiff
assets/material-icons-png/: LICENSE.txt  _MaterialIconList.Txt
core/: Basics.c  Cellwise.c  Filtering.c  Mixing.c  Noise.c  Procedural.c  Rasteron.h
demos/: Canvas.c  Carousel.c  Catalouge.c  Catalouge.h  Cellwise.c  DemoCellwise_win.c  DemoImaging_win.c  DemoPrim_win.c  DrawTool.c  EasyGUI.c  GUI.c  Generation.c  Imaging_win.c  NaturalSim.c  Noise.c  Painter.c  Picker.c  Playground.c  Primitives.c  RadTool.c  ReadTest.c  Roulette.c  Sequence.c  SimTool.c  TODO.md  TestRead.c  TestWrite.c  TexTool.c  TileTool.c  Typo.c  Win_Cellwise.c  Win_Imaging.c  Win_Noise.c  Win_Primitives.c  WriteTest.c  _Catalouge.c  _Catalouge.h  _Demo.c  _Demo.h
demos/DrawTool/: Draw.c  DrawTool.c
demos/GUI/: GUI.c
demos/HypnoTool/: Hypno.c  HypnoTool.c
demos/LabTool/: Lab.c  LabTool.c  LabTool.h
demos/RadTool/: RadTool.c
demos/SimTool/: Sim.c  SimTool.c
demos/TexTool/: Tex.c  TexTool.c
demos/TileTool/: Tile.c  TileTool.c
demos/catalouge/: Catalouge.c  Catalouge.h
demos/experimental/: Experimental.c  Experimental.h
demos/unix/: Experiment.c  Generation.c  OpenSesame.c  Test.c  Typo.c
demos/win/: Cellwise.c  Generation.c  Noise.c  Sequence.c  Typo.c
ext/: Font.c  Font.h  Queue.c  Queue.h  Spacial.c  Spacial.h
include/: .Util_OS.h.kate-swp  Animation.h  Cellwise.h  Dimensional.h  Experimental.h  Feat_Queue.h  Feat_Space.h  Feat_Spatial.h  Feat_Text.h  Font.h  Heightmap.h  Image.h  ImageLoader.h  ImageSupport.h  Lattice.h  Loader.h  Noise.h  OS_Util.h  Pattern.h  PixelPoint.h  Primitive.h  Queue.h  Queue_Feature.h  Rasteron.h  Rasteron_Manager.h  Spacial.h  Spatial_Feature.h  Support.h  Text.h  Text_Feature.h  Toolbox.h  Util_Demo.h  Util_OS.h  Util_Runner.h  coord_type.h  geo_type.h  helpers.h  methods.h  mixtype.h  point_type.h  (+12 more)
loader/: ImgBmp.c  ImgJpeg.c  ImgPng.c  ImgTIFF.c  Loader.c  Loader.h
programs/: _Prog.c  _Prog.h
programs/DrawTool/: DrawTool.c
programs/GUI/: GUI.c
programs/HypnoTool/: Hypno.c  HypnoTool.c
programs/LabTool/: Lab.c  LabTool.c  LabTool.h
programs/SimTool/: Sim.c  SimTool.c
programs/TexTool/: Tex.c  TexArgs.c  TexTool.c
programs/TileTool/: Tile.c  TileTool.c
src/: Experimental.c  Img.c  ImgBmp.c  ImgPng.c  ImgTIFF.c  ImgTarga.c  Loader.c  NativeImg_win.c  Toolbox.c  Unix_Util.c  Win_NativeImg.c  Win_Util.c  helpers.c  methods.c  tools.c  type_def.c  typedef.c  typeinit.c  types.c
src/Cellwise/: Cellwise.c
src/Core/: Heightmap.c  HeightmapGen.c  ImageGen.c  Loader.c  PrimitiveGen.c
src/Primitives/: Rasteron_Primitives.c
src/core/: Basics.c  Cellwise.c  Dimensional.c  Filtering.c  Functional.c  Image.c  ImageGen.c  Mixing.c  Noise.c  PixelPoint.c  Primitive.c  PrimitiveGen.c  Procedural.c  Seeding.c  coord_type.c  geo_type.c  geotype.c  mix_type.c  mixtype.c  palette_type.c  point_type.c  pointtype.c  seed.c  swatch.c
src/ext/: Font.c  Queue.c  Spacial.c
src/feature/: Feat_Queue.c  Feat_Space.c  Feat_Spatial.c  Feat_Text.c  Queue_Feature.c  Spatial_Feature.c  Text_Feature.c
src/helper/: Unix_Util.c  Win_Util.c
src/plugin/: Animation.c  Cellwise.c  Font.c  Heightmap.c  Lattice.c  Noise.c  Pattern.c  Queue.c  Text.c
src/util/: Unix_Util.c  Util_Unix.c  Util_Win.c
support/: func_def.c  func_def.h  support_def.h  support_def.h.in  type_def.c  type_def.h
test/: Read.c  Write.c
tools/: _Prog.c  _Tool.c  _Tool.h
tools/DrawTool/: Draw.c  DrawTool.c
tools/HypnoTool/: Hypno.c  HypnoTool.c
tools/LabTool/: Lab.c  LabTool.c  LabTool.h
tools/RayTool/: Ray.c  RayTool.c
tools/SimTool/: SimTool.c
tools/TexTool/: Tex.c  TexArgs.c  TexTool.c
tools/TileTool/: Tile.c  TileTool.c
tools/UITool/: UITool.c
util/: Util_OS.h  Util_Unix.c  Util_Win.c  Util_Win.cpp
